# CryptoBridge

./: README.md
CryptoBridge-node/: .env.example  .gitignore  index.js  package-lock.json  package.json
CryptoBridge-python/: .gitignore  main.py  pyproject.toml  requirements.txt
CryptoBridge-python/src/application/services/: bridge_service.py  metrics_service.py
CryptoBridge-python/src/domain/entities/: exchange.py  metrics.py  ticker.py
CryptoBridge-python/src/domain/repositories/: exchange_repository.py  metrics_repository.py
CryptoBridge-python/src/domain/use_cases/: get_exchanges.py  get_symbols.py  get_tickers.py
CryptoBridge-python/src/infrastructure/cache/: memory_cache.py
CryptoBridge-python/src/infrastructure/database/: connection.py  models.py
CryptoBridge-python/src/infrastructure/external_apis/: coinbase_client.py  mercado_bitcoin_client.py
CryptoBridge-python/src/infrastructure/repositories/: exchange_repository_impl.py  metrics_repository_impl.py
CryptoBridge-python/src/presentation/api/: dependencies.py  middleware.py
CryptoBridge-python/src/presentation/api/routers/: bridge_router.py  metrics_router.py
CryptoBridge-python/src/presentation/schemas/: bridge_schemas.py  metrics_schemas.py
CryptoBridge-python/tests/: conftest.py
CryptoBridge-python/tests/integration/: test_api_endpoints.py
testes/: README.md  run_all_tests.txt  test_exchanges.txt  test_metrics_exchanges_top.txt  test_metrics_exchanges_top_limit.txt  test_metrics_performance.txt  test_metrics_summary.txt  test_metrics_tickers_top.txt  test_symbols_coinbase.txt  (+7 more)
(+27 files in other folders)
