[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptobridge-python"
version = "1.0.0"
description = "Agregador de preços de criptomoedas em Python com Clean Architecture"
authors = [{name = "Róger Lasch", email = ""}]
license = {text = "ISC"}
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "aiosqlite==0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "test*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py39"